WDT24-88: css second commit

--- a/15_profilecard/index.html
+++ b/15_profilecard/index.html
@@ -12,7 +12,21 @@
             <div class="profile__content">
                 <div class="profile__desc">
                     <div class="profile__picture">
-                        <img src="src/profile.png" alt="This is profile picture">
+                        <div class="image">
+                            <img src="src/profile.png" alt="This is profile picture">
+                            <svg class="profile__border" viewBox="0 0 160 160" fill="none" height="160" width="160" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M130.912 130.912a71.997 71.997 0 0 0-10.911-110.778A71.999 71.999 0 0 0 9.383 94.046a72.004 72.004 0 0 0 19.705 36.866"
+                                stroke-width="3" stroke-linecap="round" stroke="#8E7E6D"></path>
+                            </svg>
+                            <svg class="profile__border1" viewBox="0 0 160 160" fill="none" height="160" width="160" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M130.912 130.912a71.997 71.997 0 0 0-10.911-110.778A71.999 71.999 0 0 0 9.383 94.046a72.004 72.004 0 0 0 19.705 36.866"
+                                stroke-width="3" stroke-linecap="round" stroke="#8E7E6D"></path>
+                            </svg>
+                                
+                        </div>
+
                         <div class="profile__name">
                             <h3>Jessica Potter</h3>
                             <p>Visual Artist</p>
